fixed dates. timeline scroll responsive on mobile. fixed layout. used bootstrap 3.3.7

--- a/_scss/_futbolismo.scss
+++ b/_scss/_futbolismo.scss
@@ -524,6 +524,7 @@ html:not(.page) .post .post-body p:first-child:first-letter {
 	font-size: 1em;
 	font-style: italic;
 	color: #666;
+	padding: 0 1em;
 }
 .post .comments {
 	margin-top:2rem;
@@ -555,8 +556,19 @@ html:not(.page) .post .post-body p:first-child:first-letter {
 	display:none;
 }
 .post .timeline {
-
-
+	position: relative;
+	.ix-container {
+		position: absolute;
+		width: 100%;
+		overflow: visible;
+		height: 1px;
+		.ix {
+			position: absolute;
+			right: 0;
+			height: 50vh;
+			pointer-events: none;
+		}
+	}
 }
 // .post-abstract-img img {
 // 	max-width: 180px;
@@ -586,6 +598,12 @@ html:not(.page) .post .post-body p:first-child:first-letter {
 		text-align: center;
 		border: 1px solid #aaa;
 		border-radius: 4px;
+		position: relative;
+
+		&:active {
+			background-color: #000;
+			color: #fff;
+		}
 
 		#showTimeline {
 			display: inline-block;
@@ -600,6 +618,24 @@ html:not(.page) .post .post-body p:first-child:first-letter {
 			}
 			#hideTimeline {
 				display: inline-block;
+			}
+		}
+
+	}
+	.timeline {
+		height: auto;
+		transition: height 0.5s linear;
+		margin-bottom: 75px;
+
+		&.timeline-hidden {
+			visibility: hidden;
+			height: 0 !important;
+			margin-bottom: 0;
+		}
+
+		svg {
+			* {
+				pointer-events: none;
 			}
 		}
 	}
