--- a/_scss/_timeline.scss
+++ b/_scss/_timeline.scss
@@ -131,26 +131,20 @@
 .timeline-tooltip {
 
 	position: absolute;
-
-
-
-	width:260px;
+	width: calc(100% - 200px);
 	overflow: visible;
 	height: 1px;
-	left:-185px;
+	right: 0;
 	top:0;
-
 	color:#fff;
-
 	margin:0;
-
 	height:auto;
 
 }
 .timeline-tooltip > div {
 	position: relative;
 	float: left;
-	width:260px;
+	width:100%;
 	background:#000;
 	background-color:rgba(0,0,0,0.9);
 	padding:1rem;
